--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #034C53;
 
     font-family:Arial, Helvetica, sans-serif
 }
@@ -17,7 +18,7 @@ body{
     margin: 0 auto;
     margin-top: 60px;
     /* height:400px; */
-    background-color: rgb(205, 242, 150);
+    background-color: #007074;
     border-radius: 2%
 }
 
@@ -25,14 +26,14 @@ h2{
     text-align: center;
     font-size: 25px;
     margin-top: -37px;
-    color: #ed3d05;
+    color: #F38C79;
 }
 
 .list li{
     font-size: 24px;
     list-style-type: none;
-  background-color: #e4f1e5;
-  color: red;
+  background-color: #FFC1B4;
+  color: ;
   padding: 10px;
   margin-top: 40px;
   margin-bottom: 20px;
@@ -48,14 +49,17 @@ h2{
 }
 
 div input{
-    font-size: 18px;
+    font-size: 22px;
+    width:320px;
+
+
 }
 
 div button{
     margin-left: 10px;
-    color:#fdf7f6;
-    background-color: #ed3d05;
+    color:#007074;
+    /* background-color: #ed3d05; */
     border: 2px solid bisque;
-    width:50px;
-    height:30px
+    width:60px;
+    height:29px
 }
