--- a/style.css
+++ b/style.css
@@ -18,22 +18,22 @@ body{
     margin: 0 auto;
     margin-top: 60px;
     /* height:400px; */
-    background-color: #007074;
+    background-color: #193435;
     border-radius: 2%
 }
 
 h2{
     text-align: center;
-    font-size: 25px;
-    margin-top: -37px;
-    color: #F38C79;
+    font-size: 29px;
+    margin-top: -40px;
+    color: #ffffff;
 }
 
 .list li{
     font-size: 24px;
     list-style-type: none;
-  background-color: #FFC1B4;
-  color: ;
+  background-color: #ffffff;
+  color: rgb(252, 63, 63);
   padding: 10px;
   margin-top: 40px;
   margin-bottom: 20px;
